<resources>
    <string name="app_name">Messenger App</string>
    <string name="sign_up_btn_txt">SIGN UP</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_registered">Not Registered?</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="what_i_do">What I do</string>
    <string name="login_screen_batman_icon">login screen batman icon</string>
    <string name="nickname_field_must_be_filled">Nickname must be entered</string>
    <string name="password_field_must_be_filled">Password must be entered</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="nickname_chars_invalid">NickName must only contain alphanumeric characters and spaces</string>
    <string name="signup_failed">Sign Up Failed</string>
    <string name="password_must_be_atleast_six_long">Password must be atleast six letters long</string>
    <string name="default_db_error">DB Error</string>
    <string name="default_auth_error">Auth Error</string>
    <string name="default_cloud_storage_error">Cloud Storage Error</string>
    <string name="nickname_in_use">Nickname In Use</string>
    <string name="nickname_not_found">A User with such nickname was not found</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="plus_button_for_search">plus button for search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">UPDATE</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="nickname">Nickname</string>
    <string name="search">Search</string>
    <string name="no_users_found">No Users found</string>
    <string name="back_button">back button</string>
    <string name="message">Message</string>
    <string name="send_button">Send button</string>
    <string name="no_active_conversations_found">No Active Conversations found</string>
    <string name="nickname_not_in_range">Nickname length must be between 20 and 3 characters</string>
</resources>